--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
